# wow-diaoyu

./: .gitignore  README.md  build.py  build_exe.bat  build_release.py  config.example.json  config.json  opmization.md  plan.md  requirements.txt  start.bat
.claude/: settings.local.json
assets/: README.md
src/: wow_fishing_bot.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: app.js  index.html  styles.css
