[package]
name = "wow_fishing_ui"
version = "0.1.0"
description = "Tauri UI for WOW fishing bot"
authors = ["you"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1", features = ["api-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
